--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -3676,6 +3676,88 @@
         </div>
     </div>
 </details>
+                <!-- Madde 88 -->
+<details id="madde-88" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 88 – Kanunların Teklif Edilmesi ve Görüşülmesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            <strong>Kanun teklif etmeye (...) milletvekilleri yetkilidir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanun (...) tekliflerinin Türkiye Büyük Millet Meclisinde görüşülme usul ve esasları içtüzükle düzenlenir.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu (Eski-Yeni Farkı):</h6>
+            <p style="text-align: justify;" class="text-sm">Eskiden Bakanlar Kurulu'nun sunduğu metinlere "Kanun Tasarısı", milletvekillerinin sunduğuna ise "Kanun Teklifi" denirdi. 2017 değişikliği ile Bakanlar Kurulu kalktığı için artık "Kanun Tasarısı" diye bir kavram yoktur. Yasama sürecini başlatan tek metin "Kanun Teklifi"dir ve bu yetki sadece milletvekillerine aittir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 89 -->
+<details id="madde-89" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 89 – Kanunların Cumhurbaşkanınca Yayımlanması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Cumhurbaşkanı, Türkiye Büyük Millet Meclisince kabul edilen kanunları <strong>onbeş gün içinde yayımlar.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yayımlanmasını kısmen veya tamamen uygun bulmadığı kanunları, bir daha görüşülmek üzere, bu hususta gösterdiği gerekçe ile birlikte aynı süre içinde, <strong>Türkiye Büyük Millet Meclisine geri gönderir.</strong> (...) Cumhurbaşkanınca kısmen uygun bulunmama durumunda, Türkiye Büyük Millet Meclisi sadece uygun bulunmayan maddeleri görüşebilir. <strong>Bütçe kanunları bu hükme tabi değildir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi, geri gönderilen kanunu <strong>üye tamsayısının salt çoğunluğuyla aynen kabul ederse, kanun Cumhurbaşkanınca yayımlanır;</strong> Meclis, geri gönderilen kanunda <strong>yeni bir değişiklik yaparsa, Cumhurbaşkanı değiştirilen kanunu tekrar Meclise geri gönderebilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Anayasa değişikliklerine ilişkin hükümler saklıdır.
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, Cumhurbaşkanının yasama sürecindeki "denetim" rolünü (veto hakkını) düzenler. Süreç şöyledir:<br>
+          <strong>1. Onaylama:</strong> CB, 15 gün içinde kanunu yayımlar.<br>
+          <strong>2. Veto (Geri Gönderme):</strong> CB, 15 gün içinde kanunu Meclis'e geri gönderir.<br>
+          <strong>3. Meclis'in Israrı:</strong> Meclis, vetolu kanunu <strong>aynen ve en az 301 oyla</strong> kabul ederse, CB yayımlamak zorundadır. Bu "güçleştirici veto"dur.<br>
+          <strong>4. İkinci Veto Hakkı:</strong> Eğer Meclis kanunda küçük bir değişiklik bile yaparsa, Cumhurbaşkanı bu "yeni" kanunu bir kez daha veto etme hakkı kazanır.</p>
+          <p style="text-align: justify;" class="text-sm mt-2 text-red-700"><strong>⚠️ En Önemli İstisna:</strong> Cumhurbaşkanı, tek bir kanunu veto edemez: <strong>Bütçe Kanunu.</strong></p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 90 -->
+<details id="madde-90" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 90 – Milletlerarası Andlaşmaları Uygun Bulma
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Cumhuriyeti adına yabancı devletlerle ve milletlerarası kuruluşlarla yapılacak andlaşmaların onaylanması, <strong>Türkiye Büyük Millet Meclisinin onaylamayı bir kanunla uygun bulmasına bağlıdır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Ekonomik, ticari veya teknik ilişkileri düzenleyen ve süresi bir yılı aşmayan andlaşmalar, Devlet Maliyesi bakımından bir yüklenme getirmemek, kişi hallerine ve Türklerin yabancı memleketlerdeki mülkiyet haklarına dokunmamak şartıyla, yayımlanma ile yürürlüğe konabilir. Bu takdirde bu andlaşmalar, yayımlarından başlayarak iki ay içinde Türkiye Büyük Millet Meclisinin bilgisine sunulur.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Milletlerarası bir andlaşmaya dayanan uygulama andlaşmaları ile kanunun verdiği yetkiye dayanılarak yapılan ekonomik, ticari, teknik veya idari andlaşmaların Türkiye Büyük Millet Meclisince uygun bulunması zorunluğu yoktur; ancak, bu fıkraya göre yapılan ekonomik, ticari veya özel kişilerin haklarını ilgilendiren andlaşmalar, yayımlanmadan yürürlüğe konulamaz.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türk kanunlarına değişiklik getiren her türlü andlaşmaların yapılmasında birinci fıkra hükmü uygulanır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Usulüne göre yürürlüğe konulmuş Milletlerarası andlaşmalar kanun hükmündedir.</strong> <strong>Bunlar hakkında Anayasaya aykırılık iddiası ile Anayasa Mahkemesine başvurulamaz.</strong> (...) <strong>Usulüne göre yürürlüğe konulmuş temel hak ve özgürlüklere ilişkin milletlerarası andlaşmalarla kanunların aynı konuda farklı hükümler içermesi nedeniyle çıkabilecek uyuşmazlıklarda milletlerarası andlaşma hükümleri esas alınır.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Andlaşmaların 5 Altın Kuralı</h6>
+          <ol class="list-decimal pl-5 text-sm space-y-1">
+            <li><strong>Onay Süreci:</strong> TBMM bir kanunla "uygun bulur", Cumhurbaşkanı "onaylar".</li>
+            <li><strong>Hukuki Değeri:</strong> Kanun hükmündedirler (kanunlarla eşittirler).</li>
+            <li><strong>Yargısal Denetim:</strong> Anayasa Mahkemesi'ne götürülemezler (Anayasallık denetimleri yoktur).</li>
+            <li><strong>İstisnalar:</strong> Bazı teknik ve kısa süreli andlaşmalar için TBMM'nin uygun bulması gerekmez.</li>
+            <li><strong>Süper Güç (En Önemli Kural):</strong> Eğer konu <strong>temel hak ve özgürlükler</strong> ise, andlaşma ile kanun çatışırsa, <strong>andlaşma hükmü uygulanır.</strong> Bu, temel haklar alanında andlaşmaları kanunların üstüne çıkarır.</li>
+          </ol>
+        </div>
+    </div>
+</details>
                 
 </section>
  
