--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -3758,6 +3758,116 @@
         </div>
     </div>
 </details>
+                <!-- Madde 91 -->
+<details id="madde-91" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 bg-slate-100 text-slate-500">
+        <span class="mr-3 text-xl">📘</span> Madde 91 – Kanun Hükmünde Kararname Çıkarma Yetkisi Verme (Mülga)
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            (Mülga: 21/1/2017-6771/16 md.)
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: KHK Gitti, CBK Geldi!</h6>
+            <p style="text-align: justify;" class="text-sm">Bu madde, 2017 Anayasa değişikliği ile <strong>tamamen yürürlükten kaldırılmıştır.</strong> Eskiden TBMM, kanun yapma yetkisini belirli konularda Bakanlar Kurulu'na devredebilir ve bu yetkiyle Kanun Hükmünde Kararname (KHK) çıkarılırdı. Artık KHK diye bir düzenleme aracı <strong>yoktur.</strong> Onun yerine, Yürütme bölümünde göreceğimiz, doğrudan Cumhurbaşkanının çıkardığı Cumhurbaşkanlığı Kararnamesi (CBK) sistemi getirilmiştir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 92 -->
+<details id="madde-92" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 92 – Savaş Hali İlanı ve Silahlı Kuvvet Kullanılmasına İzin Verme
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Milletlerarası hukukun meşru saydığı hallerde <strong>savaş hali ilanına</strong> ve (...) <strong>Türk Silahlı Kuvvetlerinin yabancı ülkelere gönderilmesine veya yabancı silahlı kuvvetlerin Türkiye'de bulunmasına izin verme yetkisi Türkiye Büyük Millet Meclisinindir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Türkiye Büyük Millet Meclisi tatilde veya ara vermede iken ülkenin ani bir silahlı saldırıya uğraması</strong> ve bu sebeple silahlı kuvvet kullanılmasına derhal karar verilmesinin kaçınılmaz olması halinde <strong>Cumhurbaşkanı da, Türk Silahlı Kuvvetlerinin kullanılmasına karar verebilir.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, "askeri güç kullanma" yetkisinin kime ait olduğunu belirler.</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Ana Kural:</strong> Savaş ilanı, tezkere (asker gönderme/kabul etme) gibi tüm temel kararların yetkisi <strong>TBMM'ye</strong> aittir.</li>
+            <li><strong>İstisnai Durum:</strong> Cumhurbaşkanı, sadece <strong>"Meclis tatildeyken + Ülkeye ani bir saldırı olursa"</strong>, Meclis kararı olmaksızın TSK'nın kullanılmasına karar verebilir. Bu, acil meşru müdafaa durumudur.</li>
+          </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 93 -->
+<details id="madde-93" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 93 – Toplanma ve Tatil
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi, her yıl <strong>Ekim ayının ilk günü kendiliğinden toplanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Meclis, bir yasama yılında <strong>en çok üç ay tatil yapabilir</strong>; ara verme veya tatil sırasında (...) Cumhurbaşkanınca toplantıya çağrılır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Meclis Başkanı da doğrudan doğruya veya <strong>üyelerin beşte birinin yazılı istemi üzerine</strong>, Meclisi toplantıya çağırır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Ara verme veya tatil sırasında toplanan Türkiye Büyük Millet Meclisinde, öncelikle bu toplantıyı gerektiren konu görüşülmeden ara verme veya tatile devam edilemez.
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Meclis'in Yıllık Takvimi</h6>
+          <p style="text-align: justify;" class="text-sm">Bu maddedeki tarihler, süreler ve sayılar doğrudan sınav sorusudur:</p>
+           <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Olağan Toplanma:</strong> Her yıl <strong>1 Ekim</strong>'de kendiliğinden.</li>
+            <li><strong>Tatil Süresi:</strong> Bir yasama yılında en çok <strong>3 ay</strong>.</li>
+            <li><strong>Olağanüstü Toplantı Çağrısı:</strong> Cumhurbaşkanı, TBMM Başkanı veya <strong>1/5 (120) milletvekili</strong> isteyebilir.</li>
+           </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 94 -->
+<details id="madde-94" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 94 – Başkanlık Divanı
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisinin Başkanlık Divanı, Meclis üyeleri arasından seçilen Meclis Başkanı, Başkanvekilleri, Katip üyeler ve İdare Amirlerinden oluşur.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Başkanlık Divanı, Meclisteki siyasi parti gruplarının üye sayısı oranında Divana katılmalarını sağlayacak şekilde kurulur. <strong>Siyasi parti grupları Başkanlık için aday gösteremezler.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi Başkanlık Divanı için, <strong>bir yasama döneminde iki seçim yapılır.</strong> <strong>İlk seçilenlerin görev süresi iki yıldır, ikinci devre için seçilenlerin görev süresi ise o yasama döneminin sonuna kadar devam eder.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            (...) Başkan seçimi gizli oyla yapılır. <strong>İlk iki oylamada üye tamsayısının üçte iki</strong> ve <strong>üçüncü oylamada üye tamsayısının salt çoğunluğu</strong> aranır. Üçüncü oylamada salt çoğunluk sağlanamazsa, bu oylamada en çok oy alan iki aday için <strong>dördüncü oylama yapılır; dördüncü oylamada en fazla oy alan üye, Başkan seçilmiş olur.</strong> (...)
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            (...)
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi Başkanı, Başkanvekilleri, üyesi bulundukları siyasi partinin veya parti grubunun Meclis içinde veya dışındaki faaliyetlerine; görevlerinin gereği olan haller dışında, Meclis tartışmalarına katılamazlar; <strong>Başkan ve oturumu yöneten Başkanvekili oy kullanamazlar.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Meclis Başkanı Seçimi</h6>
+          <ul class="list-disc pl-5 text-sm space-y-2">
+            <li><strong>Görev Süresi:</strong> İlk devre <strong>2 yıl</strong>, ikinci devre yasama dönemi sonuna kadar.</li>
+            <li><strong>Seçim Turları (Gizli Oyla):</strong>
+                 <ul class="list-disc pl-5 mt-1">
+                    <li>1. Tur: 400 Oy (2/3)</li>
+                    <li>2. Tur: 400 Oy (2/3)</li>
+                    <li>3. Tur: 301 Oy (Salt Çoğunluk)</li>
+                    <li>4. Tur: 3. turdaki en çok oyu alan iki aday yarışır, en fazla oyu alan kazanır.</li>
+                </ul>
+            </li>
+            <li><strong>Tarafsızlık Kuralı:</strong> Başkan ve o anki oturumu yöneten Başkanvekili <strong>oy kullanamaz.</strong> Bu, sınavların favori bilgisidir.</li>
+          </ul>
+        </div>
+    </div>
+</details>
                 
 </section>
  
