--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4128,6 +4128,79 @@
         </div>
     </details>
 </div>
+
+                <!-- Özel Çalışma: Yasama'nın Şifreleri -->
+<div class="my-16 p-6 md:p-8 bg-amber-50 rounded-2xl border-t-8 border-amber-500 shadow-lg" role="region" aria-labelledby="yasama-sifreleri-2">
+    <h3 id="yasama-sifreleri-2" class="text-3xl md:text-4xl font-extrabold text-center mb-4 text-amber-800">
+        ÖZEL ÇALIŞMA: YASAMA'NIN ŞİFRELERİ (Ezber Bozan Yöntem)
+    </h3>
+    <p class="text-center text-amber-700 max-w-3xl mx-auto mb-10">
+        Değerli aday, Yasama bölümündeki sayıları, süreleri ve kavramları ezberlemek zor olabilir. Bu özel bölümde, tüm bu kritik verileri bir hikaye ve somut örneklerle kalıcı hafızaya alacağız.
+    </p>
+
+    <!-- BÖLÜM 1: HAFIZA SARAYI YÖNTEMİ -->
+    <div class="mb-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Teknik 1: Hafıza Sarayı - "TBMM Binasında Bir Gün"</h4>
+        <p class="text-center text-slate-600 max-w-3xl mx-auto mb-8 text-sm">Tüm sayıları, Meclis binasında geçirdiğimiz bir günün hikayesiyle hatırlayacağız. Gözünüzde canlandırın:</p>
+        <div class="space-y-4">
+            <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
+                <h6 class="font-bold text-slate-800">📍 Meclis'in Kapısından Giriş</h6>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Devasa bir bina... içinde tam <strong>600</strong> oda var (Milletvekili Sayısı, Md. 75). Kapıdaki görevli diyor ki: "Eğer bir 'parti grubu' olarak tanınmak istiyorsanız, yanınızda en az <strong>20</strong> kişi olmalı." (Md. 95).</p>
+            </div>
+            <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
+                <h6 class="font-bold text-slate-800">📍 Genel Kurul Salonu'na Girdik</h6>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Salonda oturumun başlaması için en az <strong>200 (1/3)</strong> kişinin koltuklarda oturması gerekiyor (Toplantı Yeter Sayısı). Bir kanun oylaması yapılıyor. Kanunun kabulü için "EVET" oyu, salondakilerin yarısından fazla olmalı, ama ne olursa olsun bu sayı asla <strong>151'den (1/4+1)</strong> az olmamalı (Karar Yeter Sayısı, Md. 96).</p>
+            </div>
+            <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
+                <h6 class="font-bold text-slate-800">📍 Başkanlık Kürsüsüne Bakıyoruz</h6>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Meclis Başkanı seçiliyor. Çok zorlu bir seçim! Adayın seçilebilmesi için ilk 2 turda tam <strong>400 (2/3)</strong> oy, 3. turda ise <strong>301 (Salt Çoğunluk)</strong> oy alması lazım. Seçilen başkan, bu koltuğa ilk etapta <strong>2 yıllığına</strong> oturuyor (Md. 94).</p>
+            </div>
+             <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
+                <h6 class="font-bold text-slate-800">📍 Cumhurbaşkanlığından Gelen Zarf</h6>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Cumhurbaşkanı bir kanunu veto etmiş. Meclis'in bu vetoyu aşabilmesi için <strong>301 (Salt Çoğunluk)</strong> vekilin imzasıyla kanunu aynen geri göndermesi gerekiyor. Cumhurbaşkanının bu zarfı göndermek için <strong>15 günü</strong> vardı (Md. 89).</p>
+            </div>
+             <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
+                <h6 class="font-bold text-slate-800">📍 Özel Bir Kapı: "Af Odası"</h6>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Salonda kilitli özel bir kapı var. Bu kapının kilidi o kadar karmaşık ki, ancak <strong>360 (3/5)</strong> milletvekilinin aynı anda anahtarını çevirmesiyle açılabiliyor (Genel/Özel Af, Md. 87).</p>
+            </div>
+             <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
+                <h6 class="font-bold text-slate-800">📍 Pencereden Dışarı Bakıyoruz</h6>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Bu görkemli binanın (Yasama Dönemi) görev süresi <strong>5 yıl</strong> (Md. 77). Bahçede bir tabela görüyoruz: "Buranın kurallarını (Seçim Kanunları) değiştirirseniz, yeni kurallar <strong>1 yıl</strong> boyunca uygulanmaz!" (Md. 67).</p>
+            </div>
+              <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
+                <h6 class="font-bold text-slate-800">📍 Acil Durum Telefonu</h6>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Kürsünün yanında kırmızı bir telefon var. Eğer bir vekilin vekilliği düşürülürse, o vekilin bu telefonu kullanmak için <strong>7 günü</strong>, telefonun ucundaki Anayasa Mahkemesi'nin ise cevap vermek için <strong>15 günü</strong> var (Md. 85).</p>
+            </div>
+        </div>
+    </div>
+    
+    <!-- BÖLÜM 2: KAVRAMLARI SOMUTLAŞTIRMA -->
+    <div class="mt-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Teknik 2: Kavramları Somutlaştırma Şifreleri</h4>
+        <div class="space-y-6">
+            <div class="p-6 bg-white rounded-lg border border-slate-200 shadow-sm">
+                 <h6 class="font-bold text-slate-800">Dokunulmazlık Zırhları: "Çelik Yelek" ve "Enerji Kalkanı"</h6>
+                 <div class="grid md:grid-cols-2 gap-4 mt-2">
+                    <div class="p-4 rounded-lg bg-red-50 border-l-4 border-red-400">
+                        <p class="font-semibold text-red-800">Yasama Sorumsuzluğu ➡️ Çelik Yelek</p>
+                        <p class="text-sm text-slate-700 mt-1">Sadece göğsü (kürsüdeki söz ve oyları) korur, ama <strong>asla çıkmaz, ömür boyu kalıcıdır ve delinmez (mutlaktır).</strong></p>
+                    </div>
+                     <div class="p-4 rounded-lg bg-teal-50 border-l-4 border-teal-400">
+                        <p class="font-semibold text-teal-800">Yasama Dokunulmazlığı ➡️ Enerji Kalkanı</p>
+                        <p class="text-sm text-slate-700 mt-1">Tüm vücudu (tüm suç iddialarını) korur, ama <strong>geçicidir (vekillik süresince) ve Meclis, bir oylamayla bu kalkanı kapatabilir (kaldırılabilir).</strong></p>
+                    </div>
+                 </div>
+            </div>
+             <div class="p-6 bg-white rounded-lg border border-slate-200 shadow-sm">
+                 <h6 class="font-bold text-slate-800">"Hükümlü" ve "Tutuklu" İçin Harf Şifresi</h6>
+                 <ul class="list-disc pl-5 mt-2 space-y-1 text-sm text-slate-700">
+                    <li><strong>H</strong>ükümlü ➡️ <strong>H</strong>akkı Kısıtlı (Oy Kullanamaz).</li>
+                    <li><strong>T</strong>utuklu ➡️ <strong>T</strong>edbiren İçeride (Masum olabilir, Oy Kullanabilir).</li>
+                 </ul>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
  
             </article>
