--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4145,31 +4145,31 @@
         <div class="space-y-4">
             <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
                 <h6 class="font-bold text-slate-800">📍 Meclis'in Kapısından Giriş</h6>
-                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Devasa bir bina... içinde tam <strong>600</strong> oda var (Milletvekili Sayısı, Md. 75). Kapıdaki görevli diyor ki: "Eğer bir 'parti grubu' olarak tanınmak istiyorsanız, yanınızda en az <strong>20</strong> kişi olmalı." (Md. 95).</p>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Devasa bir bina... içinde tam <strong>600</strong> oda var (Milletvekili Sayısı). Kapıdaki görevli diyor ki: "Eğer bir 'parti grubu' olarak tanınmak istiyorsanız, yanınızda en az <strong>20</strong> kişi olmalı."</p>
             </div>
             <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
                 <h6 class="font-bold text-slate-800">📍 Genel Kurul Salonu'na Girdik</h6>
-                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Salonda oturumun başlaması için en az <strong>200 (1/3)</strong> kişinin koltuklarda oturması gerekiyor (Toplantı Yeter Sayısı). Bir kanun oylaması yapılıyor. Kanunun kabulü için "EVET" oyu, salondakilerin yarısından fazla olmalı, ama ne olursa olsun bu sayı asla <strong>151'den (1/4+1)</strong> az olmamalı (Karar Yeter Sayısı, Md. 96).</p>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Salonda oturumun başlaması için en az <strong>200 (1/3)</strong> kişinin koltuklarda oturması gerekiyor (Toplantı Yeter Sayısı). Bir kanun oylaması yapılıyor. Kanunun kabulü için "EVET" oyu, salondakilerin yarısından fazla olmalı, ama ne olursa olsun bu sayı asla <strong>151'den (1/4+1)</strong> az olmamalı (Karar Yeter Sayısı).</p>
             </div>
             <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
                 <h6 class="font-bold text-slate-800">📍 Başkanlık Kürsüsüne Bakıyoruz</h6>
-                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Meclis Başkanı seçiliyor. Çok zorlu bir seçim! Adayın seçilebilmesi için ilk 2 turda tam <strong>400 (2/3)</strong> oy, 3. turda ise <strong>301 (Salt Çoğunluk)</strong> oy alması lazım. Seçilen başkan, bu koltuğa ilk etapta <strong>2 yıllığına</strong> oturuyor (Md. 94).</p>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Meclis Başkanı seçiliyor. Çok zorlu bir seçim! Adayın seçilebilmesi için ilk 2 turda tam <strong>400 (2/3)</strong> oy, 3. turda ise <strong>301 (Salt Çoğunluk)</strong> oy alması lazım. Seçilen başkan, bu koltuğa ilk etapta <strong>2 yıllığına</strong> oturuyor.</p>
             </div>
              <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
                 <h6 class="font-bold text-slate-800">📍 Cumhurbaşkanlığından Gelen Zarf</h6>
-                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Cumhurbaşkanı bir kanunu veto etmiş. Meclis'in bu vetoyu aşabilmesi için <strong>301 (Salt Çoğunluk)</strong> vekilin imzasıyla kanunu aynen geri göndermesi gerekiyor. Cumhurbaşkanının bu zarfı göndermek için <strong>15 günü</strong> vardı (Md. 89).</p>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Cumhurbaşkanı bir kanunu veto etmiş. Meclis'in bu vetoyu aşabilmesi için <strong>301 (Salt Çoğunluk)</strong> vekilin imzasıyla kanunu aynen geri göndermesi gerekiyor. Cumhurbaşkanının bu zarfı göndermek için <strong>15 günü</strong> vardı.</p>
             </div>
              <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
                 <h6 class="font-bold text-slate-800">📍 Özel Bir Kapı: "Af Odası"</h6>
-                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Salonda kilitli özel bir kapı var. Bu kapının kilidi o kadar karmaşık ki, ancak <strong>360 (3/5)</strong> milletvekilinin aynı anda anahtarını çevirmesiyle açılabiliyor (Genel/Özel Af, Md. 87).</p>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Salonda kilitli özel bir kapı var. Bu kapının kilidi o kadar karmaşık ki, ancak <strong>360 (3/5)</strong> milletvekilinin aynı anda anahtarını çevirmesiyle açılabiliyor (Genel/Özel Af).</p>
             </div>
              <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
                 <h6 class="font-bold text-slate-800">📍 Pencereden Dışarı Bakıyoruz</h6>
-                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Bu görkemli binanın (Yasama Dönemi) görev süresi <strong>5 yıl</strong> (Md. 77). Bahçede bir tabela görüyoruz: "Buranın kurallarını (Seçim Kanunları) değiştirirseniz, yeni kurallar <strong>1 yıl</strong> boyunca uygulanmaz!" (Md. 67).</p>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Bu görkemli binanın (Yasama Dönemi) görev süresi <strong>5 yıl</strong>. Bahçede bir tabela görüyoruz: "Buranın kurallarını (Seçim Kanunları) değiştirirseniz, yeni kurallar <strong>1 yıl</strong> boyunca uygulanmaz!"</p>
             </div>
               <div class="p-4 bg-white rounded-lg border-l-4 border-slate-300">
                 <h6 class="font-bold text-slate-800">📍 Acil Durum Telefonu</h6>
-                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Kürsünün yanında kırmızı bir telefon var. Eğer bir vekilin vekilliği düşürülürse, o vekilin bu telefonu kullanmak için <strong>7 günü</strong>, telefonun ucundaki Anayasa Mahkemesi'nin ise cevap vermek için <strong>15 günü</strong> var (Md. 85).</p>
+                <p class="text-sm text-slate-700 mt-1" style="text-align: justify;">Kürsünün yanında kırmızı bir telefon var. Eğer bir vekilin vekilliği düşürülürse, o vekilin bu telefonu kullanmak için <strong>7 günü</strong>, telefonun ucundaki Anayasa Mahkemesi'nin ise cevap vermek için <strong>15 günü</strong> var.</p>
             </div>
         </div>
     </div>
@@ -4198,9 +4198,15 @@
                     <li><strong>T</strong>utuklu ➡️ <strong>T</strong>edbiren İçeride (Masum olabilir, Oy Kullanabilir).</li>
                  </ul>
             </div>
+             <div class="p-6 bg-white rounded-lg border border-slate-200 shadow-sm">
+                 <h6 class="font-bold text-slate-800">Kanun Teklifi vs. Tasarısı</h6>
+                 <p class="text-sm text-slate-700 mt-1">Eskiden hem hükümet "tasarı", hem vekiller "teklif" sunardı. Artık sadece vekiller var. Yani, mutfakta artık sadece vekillerin <strong>TEKLİF</strong> ettiği yemekler pişiyor.</p>
+            </div>
         </div>
     </div>
 </div>
+
+                
 </section>
  
             </article>
