--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4205,6 +4205,80 @@
         </div>
     </div>
 </div>
+                <h2 id="ucuncu-kisim" class="section-title mt-16 mb-6">
+    ÜÇÜNCÜ KISIM: CUMHURİYETİN TEMEL ORGANLARI
+</h2>
+
+<section aria-labelledby="bolum-yurutme">
+    <h3 id="bolum-yurutme" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        İKİNCİ BÖLÜM: Yürütme
+    </h3>
+    <div class="highlight-box mt-4 mb-8">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Bölüm Analizi</h6>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, bu bölüm, <strong>Cumhurbaşkanlığı Hükümet Sistemi'nin kalbidir.</strong> Eskiden Yürütme organı, Cumhurbaşkanı ve Bakanlar Kurulu olmak üzere iki kanatlı ("düalist") bir yapıya sahipti. 2017 değişikliği ile bu yapı ortadan kalktı ve yürütme yetkisi, <strong>tek başına Cumhurbaşkanına</strong> verildi. Bu bölümde, Cumhurbaşkanının nasıl seçildiğini, görev ve yetkilerini, cezai sorumluluğunu ve kendisine bağlı olan idari yapıyı detaylıca inceleyeceğiz.</p>
+    </div>
+
+    <!-- Madde 101 -->
+    <details id="madde-101" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 101 – Cumhurbaşkanı Adaylık ve Seçimi
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Cumhurbaşkanı, <strong>kırk yaşını doldurmuş, yükseköğrenim yapmış, milletvekili seçilme yeterliliğine sahip Türk vatandaşları</strong> arasından, <strong>doğrudan halk tarafından seçilir.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Cumhurbaşkanının <strong>görev süresi beş yıldır.</strong> Bir kimse <strong>en fazla iki defa</strong> Cumhurbaşkanı seçilebilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Cumhurbaşkanlığına, <strong>siyasi parti grupları</strong>, en son yapılan genel seçimlerde toplam geçerli oyların tek başına veya birlikte <strong>en az yüzde beşini almış olan siyasi partiler</strong> ile <strong>en az yüzbin seçmen</strong> aday gösterebilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Cumhurbaşkanı seçilen milletvekilinin Türkiye Büyük Millet Meclisi üyeliği sona erer.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Genel oyla yapılacak seçimde, <strong>geçerli oyların salt çoğunluğunu alan aday, Cumhurbaşkanı seçilir.</strong> İlk oylamada bu çoğunluk sağlanamazsa, bu oylamayı izleyen ikinci pazar günü ikinci oylama yapılır. Bu oylamaya, <strong>ilk oylamada en çok oy almış iki aday katılır</strong> ve geçerli oyların çoğunluğunu alan aday, Cumhurbaşkanı seçilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                İkinci oylamaya katılmaya hak kazanan adaylardan birinin herhangi bir nedenle seçime katılmaması halinde; ikinci oylama, boşalan adaylığın birinci oylamadaki sıraya göre ikame edilmesi suretiyle yapılır. İkinci oylamaya tek adayın kalması halinde, bu oylama referandum şeklinde yapılır. Aday, geçerli oyların salt çoğunluğunu aldığı takdirde Cumhurbaşkanı seçilir. Oylamada, adayın geçerli oyların çoğunluğunu alamaması halinde, <strong>sadece Cumhurbaşkanı seçimi yenilenir.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Seçimlerin tamamlanamaması halinde, yenisi göreve başlayıncaya kadar mevcut Cumhurbaşkanının görevi devam eder.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Cumhurbaşkanlığı seçimlerine ilişkin diğer usul ve esaslar kanunla düzenlenir.
+            </blockquote>
+            <div class="highlight-box mt-4">
+              <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+              <p style="text-align: justify;" class="text-sm">Bu madde, devletin zirvesindeki makama giden yolun anayasal haritasını çizer. Bu haritayı 4 ana başlıkta okumalıyız:</p>
+              <ol class="list-decimal pl-5 text-sm space-y-1">
+                  <li><strong>Seçilme Şartları:</strong> 40 yaş, üniversite mezunu, Türk vatandaşı ve milletvekili seçilme yeterliliğine sahip olmak.</li>
+                  <li><strong>Görev Süresi:</strong> 5 yıldır ve bir kişi en fazla 2 defa seçilebilir.</li>
+                  <li><strong>Aday Gösterme Usulü:</strong> Siyasi parti grupları, %5 oy alan partiler veya 100.000 seçmen.</li>
+                  <li><strong>Seçim Sistemi:</strong> Doğrudan halk tarafından, iki turlu sistemle. İlk turda salt çoğunluk (%50+1) aranır.</li>
+              </ol>
+            </div>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Aday Gösterme Yöntemleri (3 Yol)</h6>
+                <p style="text-align: justify;" class="text-sm">Cumhurbaşkanlığına aday göstermenin 3 yolu vardır:</p>
+                <ul class="list-disc pl-5 space-y-1 text-sm">
+                    <li><strong>Siyasi Parti Grupları:</strong> Meclis'te grubu bulunan (20 MV) partiler.</li>
+                    <li><strong>%5 Kuralı:</strong> Son genel seçimlerde tek başına veya birlikte en az %5 oy alan partiler <strong>ortak aday</strong> gösterebilir.</li>
+                    <li><strong>100.000 Seçmen:</strong> En az yüz bin seçmen imza toplayarak.</li>
+                </ul>
+            </div>
+            <div class="warning-box mt-4">
+                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Önemli Notlar</h6>
+                 <ul class="list-disc pl-5 space-y-1 text-sm">
+                    <li>Cumhurbaşkanı seçilen milletvekilinin TBMM üyeliği <strong>kendiliğinden sona erer.</strong></li>
+                    <li>İkinci tura tek aday kalır ve referandumda salt çoğunluğu alamazsa, <strong>sadece Cumhurbaşkanı seçimi yenilenir</strong> (TBMM seçimi değil).</li>
+                 </ul>
+            </div>
+        </div>
+    </details>
+</section>
+
+                
 
                 
 </section>
