--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4278,7 +4278,64 @@
     </details>
 </section>
 
-                
+                <!-- Madde 102 -->
+<details id="madde-102" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 bg-slate-100 text-slate-500">
+        <span class="mr-3 text-xl">📘</span> Madde 102 – Seçimi (Mülga)
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            (Mülga: 21/1/2017-6771/16 md.)
+        </blockquote>
+        <div class="highlight-box mt-4">
+             <p style="text-align: justify;" class="text-sm">Bu madde, 2017 Anayasa değişikliği ile yürürlükten kaldırılmıştır. Bu maddede yer alan Cumhurbaşkanı seçimine ilişkin hükümler, daha derli toplu bir şekilde Madde 101'in içine alınmıştır.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 103 -->
+<details id="madde-103" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 103 – Andiçmesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            "Cumhurbaşkanı sıfatıyla, Devletin varlığı ve bağımsızlığını, vatanın ve milletin bölünmez bütünlüğünü, milletin kayıtsız ve şartsız egemenliğini koruyacağıma, <strong>Anayasaya, hukukun üstünlüğüne, demokrasiye, Atatürk ilke ve inkılaplarına ve laik Cumhuriyet ilkesine bağlı kalacağıma</strong>, milletin huzur ve refahı, milli dayanışma ve adalet anlayışı içinde herkesin insan haklarından ve temel hürriyetlerinden yararlanması ülküsünden ayrılmayacağıma, Türkiye Cumhuriyetinin şan ve şerefini korumak, yüceltmek ve <strong>üzerime aldığım görevi tarafsızlıkla yerine getirmek için</strong> bütün gücümle çalışacağıma Büyük Türk Milleti ve tarih huzurunda, namusum ve şerefim üzerine andiçerim."
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Milletvekili Yemini ile Farkı</h6>
+          <p style="text-align: justify;" class="text-sm">Cumhurbaşkanı andında, milletvekili andından farklı ve ek olarak <strong>"tarafsızlık"</strong> vurgusu yer alır. Bu ifade, Cumhurbaşkanının partiler üstü konumunu anayasal olarak taahhüt ettiğini gösterir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 104 -->
+<details id="madde-104" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 104 – Görev ve Yetkileri
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Cumhurbaşkanı Devletin başıdır. <strong>Yürütme yetkisi Cumhurbaşkanına aittir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanı, Devlet başkanı sıfatıyla Türkiye Cumhuriyetini ve Türk Milletinin birliğini temsil eder; Anayasanın uygulanmasını, Devlet organlarının düzenli ve uyumlu çalışmasını temin eder. (...) <strong>Kanunları yayımlar.</strong> <strong>Kanunları tekrar görüşülmek üzere Türkiye Büyük Millet Meclisine geri gönderir.</strong> <strong>Anayasa Mahkemesinde iptal davası açar.</strong> <strong>Cumhurbaşkanı yardımcıları ile bakanları atar ve görevlerine son verir.</strong> <strong>Üst kademe kamu yöneticilerini atar, görevlerine son verir</strong> (...) Milletlerarası andlaşmaları onaylar ve yayımlar. Anayasa değişikliklerini gerekli gördüğü takdirde halkoyuna sunar. Milli güvenlik politikalarını belirler ve gerekli tedbirleri alır. Türkiye Büyük Millet Meclisi adına Türk Silahlı Kuvvetlerinin Başkomutanlığını temsil eder. Türk Silahlı Kuvvetlerinin kullanılmasına karar verir. Sürekli hastalık, sakatlık ve kocama sebebiyle <strong>kişilerin cezalarını hafifletir veya kaldırır.</strong> Cumhurbaşkanı, yürütme yetkisine ilişkin konularda <strong>Cumhurbaşkanlığı kararnamesi çıkarabilir.</strong> Anayasanın ikinci kısmının birinci ve ikinci bölümlerinde yer alan <strong>temel haklar, kişi hakları ve ödevleriyle dördüncü bölümde yer alan siyasi haklar ve ödevler Cumhurbaşkanlığı kararnamesiyle düzenlenemez.</strong> <strong>Anayasada münhasıran kanunla düzenlenmesi öngörülen konularda</strong> Cumhurbaşkanlığı kararnamesi çıkarılamaz. <strong>Kanunda açıkça düzenlenen konularda</strong> Cumhurbaşkanlığı kararnamesi çıkarılamaz. Cumhurbaşkanlığı kararnamesi ile kanunlarda farklı hükümler bulunması halinde, <strong>kanun hükümleri uygulanır.</strong> Türkiye Büyük Millet Meclisinin aynı konuda kanun çıkarması durumunda, <strong>Cumhurbaşkanlığı kararnamesi hükümsüz hale gelir.</strong> Cumhurbaşkanı, kanunların uygulanmasını sağlamak üzere ve bunlara aykırı olmamak şartıyla, <strong>yönetmelikler çıkarabilir.</strong> (...)
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Özel Af (CB) vs. Genel Af (TBMM)</h6>
+            <p style="text-align: justify;" class="text-sm">Cumhurbaşkanının af yetkisi <strong>(Özel Af - Md. 104)</strong>, sadece belirli kişileri ve maddede sayılan özel sebeplerle (hastalık, yaşlılık vb.) kapsar. TBMM'nin af yetkisi <strong>(Genel Af - Md. 87)</strong> ise daha geniştir ve bir suç türünü tamamen ortadan kaldırabilir (360 vekil oyu gerekir).</p>
+        </div>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Cumhurbaşkanlığı Kararnamesinin Sınırları</h6>
+          <p style="text-align: justify;" class="text-sm mb-3">CBK, Cumhurbaşkanının en önemli yetkisidir ama sınırsız değildir. Sınavlarda en çok bu sınırlar sorulur:</p>
+          <ol class="list-decimal pl-5 text-sm space-y-1">
+              <li><strong>Konu Yasağı ("Yasak Alan"):</strong> CBK ile <strong>Kişi Hakları ve Siyasi Haklar</strong> düzenlenemez. (Dikkat: Sosyal ve Ekonomik Haklar bu yasak kapsamında değildir, CBK ile düzenlenebilir).</li>
+              <li><strong>"Münhasıran Kanun" Yasağı:</strong> Anayasa'nın "sadece kanunla düzenlenir" dediği alanlarda CBK çıkarılamaz.</li>
+              <li><strong>Kanunla Çatışma Yasağı:</strong> Kanunda bir konu zaten varsa veya sonradan kanun çıkarsa, <strong>daima kanun uygulanır</strong> ve CBK geçersiz hale gelir.</li>
+          </ol>
+        </div>
+    </div>
+</details>
 
                 
 </section>
